--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                                     <a class="ajax-link-project" data-type="page-transition" href="project06.html">
                                    		<div class="slide-title" data-number="06"><span>Album Art</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="6">Let the game proceed on the battlefield</div>
+                                   	<div class="slide-caption" data-slide-caption="6">But we as entertainers have a responsibility to these kids.
+Psych!</div>
 
                                 </div>
                                 <!--/Section Slide -->
